# MCP-Server

./: .gitignore  README.md  example.env  main.py  pyproject.toml  requirements.txt
server/: api.py  database.py  mcp.py  server_management.py  weather.py
